force-app/main/default/objects/Opportunity_Quote_Product_Item__c/Opportunity_Quote_Product_Item__c.object-meta.xml
<CustomObject>
    <description>this holds the product on the quote</description>
    <label>Opportunity Quote Product Item</label>
    <nameField>
        <label>Opportunity Quote Product Item	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Quote Product Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>