force-app/main/default/objects/Opportunity_Quote_Product_Item__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>