force-app/main/default/objects/Opportunity_Quote_Product_Item__c/fields/City_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>City_ZipCode__c</fullName>
    <description>for PP</description>
    <label>City/ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>