force-app/main/default/objects/Opportunity_Quote_Product_Item__c/fields/Id_List_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Product_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id List Product Price</label>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Opportunity Quote Product Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Product_Items</relationshipName>
    <type>Lookup</type>
</CustomField>