force-app/main/default/objects/Opportunity_Quote_Product_Item__c/fields/Migration_OppId__c.field-meta.xml
<CustomField>
    <fullName>Migration_OppId__c</fullName>
    <description>this is used for batch class for linking between quote and quote line items</description>
    <label>Migration OppId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>