force-app/main/default/objects/Opportunity_Quote_Product_Item__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>product type of the product attached to the quote</description>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>