force-app/main/default/objects/Opportunity_Quote_Product_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>This field holds number of quantity</description>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>