force-app/main/default/objects/Opportunity_Quote_Product_Item__c/recordTypes/Cd_Opportunity_Quote_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>Cd_Opportunity_Quote_Product_Item</fullName>
    <active>true</active>
    <label>Cd Opportunity Quote Product Item</label>
</RecordType>