force-app/main/default/objects/Opportunity_Quote_Product_Item__c/recordTypes/SE_Opportunity_Quote_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>SE_Opportunity_Quote_Product_Item</fullName>
    <active>true</active>
    <label>SE Opportunity Quote Product Item</label>
</RecordType>