force-app/main/default/objects/Opportunity_Quote_Product_Item__c/recordTypes/Talabat_Opportunity_Quote_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity_Quote_Product_Item</fullName>
    <active>true</active>
    <label>Talabat Opportunity Quote Product Item</label>
</RecordType>