force-app/main/default/objects/Opportunity_Quote_Product_Item__c/recordTypes/Yogiyo_Opportunity_Quote_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Opportunity_Quote_Product_Item</fullName>
    <active>true</active>
    <label>Yogiyo Opportunity Quote Product Item</label>
</RecordType>